// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloudFormation Test 1`] = `
Object {
  "DependsOn": Array [
    "DataSourceQueryGetUser",
    "ItemsApiSchemaDC216D83",
  ],
  "Properties": Object {
    "ApiId": Object {
      "Fn::GetAtt": Array [
        "ItemsApi3788C05C",
        "ApiId",
      ],
    },
    "DataSourceName": "DataSourceQueryGetUser",
    "FieldName": "getUser",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`CloudFormation Test 2`] = `
Object {
  "DependsOn": Array [
    "DataSourceQueryListUsers",
    "ItemsApiSchemaDC216D83",
  ],
  "Properties": Object {
    "ApiId": Object {
      "Fn::GetAtt": Array [
        "ItemsApi3788C05C",
        "ApiId",
      ],
    },
    "DataSourceName": "DataSourceQueryListUsers",
    "FieldName": "listUsers",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;
